# cop290-assignment1

./: CMakeLists.txt  README.md  main.cpp
include/gui/: app_style.h  canvas.h  main_window.h  properties_panel.h  properties_panel_helpers.h  shape_mode.h  tool_bar.h  unsaved_changes_dialog.h
include/parse/: svg_parser.h  svg_parser_internal.h
include/shapes/: circle.h  freehand.h  graphics_object.h  hexagon.h  line.h  rectangle.h  rounded_rectangle.h  text_shape.h
include/tools/: canvas_state.h  command.h  creating_state.h  handle_helpers.h  idle_state.h  moving_state.h  resizing_state.h  shape_property_command.h  shape_style_defaults.h
src/gui/: app_style.cpp  canvas.cpp  canvas_clipboard.cpp  canvas_events.cpp  canvas_file.cpp  canvas_history.cpp  canvas_paint.cpp  canvas_text.cpp  main_window.cpp  main_window_menus.cpp  properties_panel.cpp  properties_panel_connect.cpp  properties_panel_dialogs.cpp  properties_panel_grid.cpp  properties_panel_helpers.cpp  properties_panel_refresh.cpp  properties_panel_state.cpp  tool_bar.cpp  tool_bar_icons.cpp  unsaved_changes_dialog.cpp
src/parse/: svg_parser.cpp  svg_parser_shapes.cpp  svg_parser_utils.cpp
src/shapes/: circle.cpp  freehand.cpp  freehand_ops.cpp  graphics_object.cpp  hexagon.cpp  hexagon_geo.cpp  line.cpp  rectangle.cpp  rounded_rectangle.cpp  text_shape.cpp  text_shape_ops.cpp
src/tools/: canvas_state.cpp  command.cpp  creating_state.cpp  handle_helpers.cpp  handle_helpers_draw.cpp  idle_state.cpp  idle_state_create.cpp  moving_state.cpp  resizing_state.cpp  resizing_state_apply.cpp  shape_property_command.cpp  shape_style_defaults.cpp
